// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input matches withColouredError snapshot: with coloured error mount 1`] = `
.glamor-1,
[data-glamor-1] {
  margin-bottom: 0;
}

.glamor-0,
[data-glamor-0] {
  box-sizing: border-box;
  font-family: "nta", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 4px solid #f47738;
  margin-bottom: 0;
}

.glamor-0:focus,
[data-glamor-0]:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-1,
  [data-glamor-1] {
    margin-bottom: 0;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    font-size: 19px;
    margin-bottom: 0;
  }
}

<glamorous(Input)
  error="example"
  errorColor="#f47738"
  type="text"
>
  <Input
    className="glamor-1"
    error="example"
    errorColor="#f47738"
    type="text"
  >
    <glamorous(input)
      className="glamor-1"
      error="example"
      errorColor="#f47738"
      type="text"
    >
      <input
        className="glamor-0"
        type="text"
      />
    </glamorous(input)>
  </Input>
</glamorous(Input)>
`;

exports[`Input matches withError snapshot: with error mount 1`] = `
.glamor-1,
[data-glamor-1] {
  margin-bottom: 0;
}

.glamor-0,
[data-glamor-0] {
  box-sizing: border-box;
  font-family: "nta", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 4px solid #b10e1e;
  margin-bottom: 0;
}

.glamor-0:focus,
[data-glamor-0]:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-1,
  [data-glamor-1] {
    margin-bottom: 0;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    font-size: 19px;
    margin-bottom: 0;
  }
}

<glamorous(Input)
  error="example"
  type="text"
>
  <Input
    className="glamor-1"
    error="example"
    type="text"
  >
    <glamorous(input)
      className="glamor-1"
      error="example"
      type="text"
    >
      <input
        className="glamor-0"
        type="text"
      />
    </glamorous(input)>
  </Input>
</glamorous(Input)>
`;

exports[`Input matches wrapper snapshot: wrapper mount 1`] = `
.glamor-1,
[data-glamor-1] {
  margin-bottom: 0;
}

.glamor-0,
[data-glamor-0] {
  box-sizing: border-box;
  font-family: "nta", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
  margin-bottom: 0;
}

.glamor-0:focus,
[data-glamor-0]:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-1,
  [data-glamor-1] {
    margin-bottom: 0;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    font-size: 19px;
    margin-bottom: 0;
  }
}

<glamorous(Input)
  type="text"
>
  <Input
    className="glamor-1"
    type="text"
  >
    <glamorous(input)
      className="glamor-1"
      type="text"
    >
      <input
        className="glamor-0"
        type="text"
      />
    </glamorous(input)>
  </Input>
</glamorous(Input)>
`;
